--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ DoctorDumpSDK/docs/html
 [Rr]elease/
 [Rr]elease_cc/
 [Rr]elease_cc_compatible/
+[Rr]elease_Voobly/
 [Rr]eleases/
 [Xx]64/
 [Xx]86/
