--- a/cheatdll/cheatdll.vcxproj
+++ b/cheatdll/cheatdll.vcxproj
@@ -30,7 +30,7 @@
     <ProjectGuid>{C02AB7BB-4125-4DB8-954A-CA6079C8815D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>cheatdll</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -208,7 +208,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;CHEATDLL_EXPORTS;_CRT_SECURE_NO_WARNINGS;TARGET_VOOBLY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StructMemberAlignment>4Bytes</StructMemberAlignment>
-      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(SolutionDir)DoctorDumpSDK\include;C:\Users\Vasya\source\libs\zlib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
@@ -344,11 +344,13 @@
     <ClInclude Include="iuserpatch.h" />
     <ClInclude Include="jedimaster.h" />
     <ClInclude Include="langdll.h" />
+    <ClInclude Include="languagedlloverride.h" />
     <ClInclude Include="localisation.h" />
     <ClInclude Include="log.h" />
     <ClInclude Include="mapcopy.h" />
     <ClInclude Include="mapsize.h" />
     <ClInclude Include="mastervolume.h" />
+    <ClInclude Include="mbs.h" />
     <ClInclude Include="medic.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="menu.h" />
@@ -478,6 +480,7 @@
     <ClCompile Include="jedimaster.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="langdll.cpp" />
+    <ClCompile Include="languagedlloverride.cpp" />
     <ClCompile Include="localisation.cpp" />
     <ClCompile Include="log.cpp" />
     <ClCompile Include="mapcopy.cpp" />
